Bug 410215 - GTK's .xpm decoding is weird, stop using XPM as the default window icon. r+sr=roc, a1.9=schrep